<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_im"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user"
            android:textSize="50px"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_text_user"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >


            <EditText
                android:id="@+id/re_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLength="16"
                android:singleLine="true"
                android:textSize="50px" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="50px"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_text_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            >

            <EditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50px"
                android:inputType="textPassword"
                android:maxLength="16"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/comfrom_password"
            android:textSize="50px"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_test_password_comform"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            >

            <EditText
                android:id="@+id/re_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50px"
                android:inputType="textPassword"
                android:maxLength="16"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="50px"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_test_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <EditText
                android:id="@+id/re_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50px"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/re_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registered"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>